[tool.poetry]
name = "learn_tdd"
version = "0.1.0"
description = ""
authors = ["LJlkdskdjflsa <liliangjya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
parameterized = "^0.8.1"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
